--- a/assignment/index.html
+++ b/assignment/index.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="style.css">
     <title>Week 5 Assignment</title>
   </head>
-  <body>
-    <header>
+  <body class="body">
+    <header class="header">
       <h1>Week 5 Assignment - Part 2</h1>
       <h2>Kelsey Kuno's record shop</h2>
     </header>
-    <main>
+    <main class ="main">
       <p>See console for output.</p>
     </main>
     <!-- Create an unordered list with any questions you have -->
